crates/qwik-optimizer-oxc/tests/snapshots/should_split_spread_props_with_additional_prop4.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$ } from "@qwik.dev/core";

export default component$((props: any) => {
  return <button {...props} onClick$={() => props.onClick$()}></button>;
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_test_component_XXXXXXXXXXXX");
export default /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "test_component_XXXXXXXXXXXX"),
);

=== test.tsx_test_component_XXXXXXXXXXXX.js === (ENTRY)
import { _getConstProps } from "@qwik.dev/core";
import { _getVarProps } from "@qwik.dev/core";
import { _jsxSplit } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_test_component_button_q_e_click_XXXXXXXXXXXX");
export const test_component_XXXXXXXXXXXX = (props) => {
  return /* @__PURE__ */ _jsxSplit(
    "button",
    {
      ..._getVarProps(props),
      "q-e:click": /* @__PURE__ */ qrl(
        i_XXXXXXXXXXXX,
        "test_component_button_q_e_click_XXXXXXXXXXXX",
        [props],
      ),
    },
    _getConstProps(props),
    null,
    0,
    "u6_0",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "test_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_test_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "paramNames": [
    "props"
  ]
}
*/

=== test.tsx_test_component_button_q_e_click_XXXXXXXXXXXX.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
export const test_component_button_q_e_click_XXXXXXXXXXXX = () => {
  const props = _captures[0];
  return props.onClick$();
};

/*
{
  "origin": "test.tsx",
  "name": "test_component_button_q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_test_component_button_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_test_component_button_q_e_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "test_component_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "captureNames": [
    "props"
  ]
}
*/

=== DIAGNOSTICS ===

[]
