crates/qwik-optimizer-oxc/tests/snapshots/should_transform_event_names_without_jsx_transpile.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$, $ } from "@qwik.dev/core";
import mongo from "mongodb";

export const Greeter = component$(() => {
  // Double count watch
  useTask$(async () => {
    await mongo.users();
  });
  return (
    <div>
      <div onClick$={() => {}} />
      <div onClick$={() => {}} />
      <div onClick$={() => {}} />
    </div>
  );
});

=== test.tsx ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Greeter_component_XXXXXXXXXXXX");
export const Greeter = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Greeter_component_XXXXXXXXXXXX"),
);

=== test.tsx_Greeter_component_XXXXXXXXXXXX.tsx === (ENTRY)
import mongo from "mongodb";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () =>
  import("./test.tsx_Greeter_component_div_div_q_e_click_2_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () =>
  import("./test.tsx_Greeter_component_div_div_q_e_click_1_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_Greeter_component_div_div_q_e_click_XXXXXXXXXXXX");
export const Greeter_component_XXXXXXXXXXXX = () => {
  // Double count watch
  useTask$(async () => {
    await mongo.users();
  });
  return (
    <div>
      <div
        q-e:click={
          /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Greeter_component_div_div_q_e_click_XXXXXXXXXXXX")
        }
      />
      <div
        q-e:click={
          /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Greeter_component_div_div_q_e_click_1_XXXXXXXXXXXX")
        }
      />
      <div
        q-e:click={
          /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Greeter_component_div_div_q_e_click_2_XXXXXXXXXXXX")
        }
      />
    </div>
  );
};

/*
{
  "origin": "test.tsx",
  "name": "Greeter_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Greeter_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Greeter_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_Greeter_component_div_div_q_e_click_XXXXXXXXXXXX.tsx === (ENTRY)
export const Greeter_component_div_div_q_e_click_XXXXXXXXXXXX = () => {};

/*
{
  "origin": "test.tsx",
  "name": "Greeter_component_div_div_q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Greeter_component_div_div_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Greeter_component_div_div_q_e_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "tsx",
  "parent": "Greeter_component_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false
}
*/

=== test.tsx_Greeter_component_div_div_q_e_click_1_XXXXXXXXXXXX.tsx === (ENTRY)
export const Greeter_component_div_div_q_e_click_1_XXXXXXXXXXXX = () => {};

/*
{
  "origin": "test.tsx",
  "name": "Greeter_component_div_div_q_e_click_1_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Greeter_component_div_div_q_e_click_1",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Greeter_component_div_div_q_e_click_1_XXXXXXXXXXXX",
  "path": "",
  "extension": "tsx",
  "parent": "Greeter_component_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false
}
*/

=== test.tsx_Greeter_component_div_div_q_e_click_2_XXXXXXXXXXXX.tsx === (ENTRY)
export const Greeter_component_div_div_q_e_click_2_XXXXXXXXXXXX = () => {};

/*
{
  "origin": "test.tsx",
  "name": "Greeter_component_div_div_q_e_click_2_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Greeter_component_div_div_q_e_click_2",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Greeter_component_div_div_q_e_click_2_XXXXXXXXXXXX",
  "path": "",
  "extension": "tsx",
  "parent": "Greeter_component_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false
}
*/

=== DIAGNOSTICS ===

[]
