crates/qwik-optimizer-oxc/tests/snapshots/should_transform_multiple_event_handlers_case2.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$, useSignal, Signal } from "@qwik.dev/core";
const Foo = component$(function () {
  const data = useSignal<Signal<any>[]>([]);
  return (
    <div>
      {data.value.map((row, idx) => (
        <div
          onClick$={() => console.log(row.value.id, idx)}
          onMouseOver$={() => console.log("over" + row.value.id)}
        >
          <p onClick$={() => console.log("inner" + row.value.id)}>{item.value.id}</p>
        </div>
      ))}
    </div>
  );
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Foo_component_XXXXXXXXXXXX");
/* @__PURE__ */ componentQrl(/* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Foo_component_XXXXXXXXXXXX"));

=== test.tsx_Foo_component_XXXXXXXXXXXX.js === (ENTRY)
import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Foo_component_div_div_q_e_mouseover_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_Foo_component_div_div_p_q_e_click_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_Foo_component_div_div_q_e_click_XXXXXXXXXXXX");
export const Foo_component_XXXXXXXXXXXX = function () {
  const data = useSignal([]);
  const Foo_component_div_div_q_e_click_XXXXXXXXXXXX = /* @__PURE__ */ qrl(
    i_XXXXXXXXXXXX,
    "Foo_component_div_div_q_e_click_XXXXXXXXXXXX",
  );
  const Foo_component_div_div_q_e_mouseover_XXXXXXXXXXXX = /* @__PURE__ */ qrl(
    i_XXXXXXXXXXXX,
    "Foo_component_div_div_q_e_mouseover_XXXXXXXXXXXX",
  );
  const Foo_component_div_div_p_q_e_click_XXXXXXXXXXXX = /* @__PURE__ */ qrl(
    i_XXXXXXXXXXXX,
    "Foo_component_div_div_p_q_e_click_XXXXXXXXXXXX",
  );
  return /* @__PURE__ */ _jsxSorted(
    "div",
    null,
    null,
    data.value.map((row, idx) =>
      /* @__PURE__ */ _jsxSorted(
        "div",
        {
          "q-e:click": Foo_component_div_div_q_e_click_XXXXXXXXXXXX,
          "q-e:mouseover": Foo_component_div_div_q_e_mouseover_XXXXXXXXXXXX,
          "q:ps": [row, idx],
        },
        null,
        /* @__PURE__ */ _jsxSorted(
          "p",
          {
            "q-e:click": Foo_component_div_div_p_q_e_click_XXXXXXXXXXXX,
            "q:p": row,
          },
          null,
          item.value.id,
          0,
          null,
        ),
        0,
        "u6_0",
      ),
    ),
    1,
    "u6_1",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "Foo_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Foo_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_Foo_component_div_div_q_e_click_XXXXXXXXXXXX.js === (ENTRY)
export const Foo_component_div_div_q_e_click_XXXXXXXXXXXX = (_, _1, row, idx) =>
  console.log(row.value.id, idx);

/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_div_q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_div_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Foo_component_div_div_q_e_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "Foo_component_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "paramNames": [
    "_",
    "_",
    "row",
    "idx"
  ]
}
*/

=== test.tsx_Foo_component_div_div_q_e_mouseover_XXXXXXXXXXXX.js === (ENTRY)
export const Foo_component_div_div_q_e_mouseover_XXXXXXXXXXXX = (_, _1, row) =>
  console.log("over" + row.value.id);

/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_div_q_e_mouseover_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_div_q_e_mouseover",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Foo_component_div_div_q_e_mouseover_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "Foo_component_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "onMouseOver$",
  "captures": false,
  "paramNames": [
    "_",
    "_",
    "row"
  ]
}
*/

=== test.tsx_Foo_component_div_div_p_q_e_click_XXXXXXXXXXXX.js === (ENTRY)
export const Foo_component_div_div_p_q_e_click_XXXXXXXXXXXX = (_, _1, row) =>
  console.log("inner" + row.value.id);

/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_div_p_q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_div_p_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Foo_component_div_div_p_q_e_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "Foo_component_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "paramNames": [
    "_",
    "_",
    "row"
  ]
}
*/

=== DIAGNOSTICS ===

[]
