crates/qwik-optimizer-oxc/tests/snapshots/should_wrap_logical_expression_in_template.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$, useSignal } from "@qwik.dev/core";

export default component$(() => {
  const count = useSignal(0);
  const count2 = useSignal(0);
  return <div>{(count || count2).value}</div>;
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_test_component_XXXXXXXXXXXX");
export default /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "test_component_XXXXXXXXXXXX"),
);

=== test.tsx_test_component_XXXXXXXXXXXX.js === (ENTRY)
import { _fnSignal } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
const _hf0 = (p0, p1) => (p0 || p1).value;
const _hf0_str = "(p0||p1).value";
export const test_component_XXXXXXXXXXXX = () => {
  const count = useSignal(0);
  const count2 = useSignal(0);
  return /* @__PURE__ */ _jsxSorted(
    "div",
    null,
    null,
    _fnSignal(_hf0, [count, count2], _hf0_str),
    3,
    "u6_0",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "test_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_test_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== DIAGNOSTICS ===

[]
